<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFormActivity">

    <EditText
        android:id="@+id/etListName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_list_name"
        android:inputType="text"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etListDesc" />

    <EditText
        android:id="@+id/etListDesc"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:hint="@string/hint_list_desc"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etListName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSave" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:onClick="save"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/etListDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:onClick="delete"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/etListDesc"
        app:layout_constraintLeft_toRightOf="@+id/btnSave"
        app:layout_constraintRight_toLeftOf="@+id/btnCancel" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:onClick="cancel"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/etListDesc"
        app:layout_constraintLeft_toRightOf="@+id/btnDelete"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>