<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductFormActivity">

    <AutoCompleteTextView
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_name"
        android:inputType="text"
        android:completionThreshold="1"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etProductCount" />

    <EditText
        android:id="@+id/etProductCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_count"
        android:inputType="numberDecimal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etProductName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/spinnerType" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etProductCount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveProduct" />

    <Button
        android:id="@+id/btnSaveProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:onClick="save"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnDeleteProduct" />

    <Button
        android:id="@+id/btnDeleteProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:onClick="delete"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"
        app:layout_constraintLeft_toRightOf="@+id/btnSaveProduct"
        app:layout_constraintRight_toLeftOf="@+id/btnCancelProduct" />

    <Button
        android:id="@+id/btnCancelProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:onClick="cancel"
        android:layout_margin="10dp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"
        app:layout_constraintLeft_toRightOf="@+id/btnDeleteProduct"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>